2017-08-29  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/libbalsa.c (libbalsa_init): drop unused call to
	uname.

2017-08-22  Tony Nelson <tonynelson@georgeanelson.com>

	Fix https://bugzilla.redhat.com/show_bug.cgi?id=1483354,
	balsa message window Queue toolbar button sends immediately

	* src/sendmsg-window.c: respect
	balsa_app.always_queue_sent_mail.

2017-08-20  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Do not crash if DSN header is absent

	Fixes https://bugzilla.redhat.com/show_bug.cgi?id=1483355

	* libbalsa/send.c (lbs_process_queue_msg): check for missing
	X-Balsa-DSN header, and do not pass NULL to atoi.

2017-08-11  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/imap/imap-handle.c (idle_start): assert that the
	  handle is not NULL, to avoid the appearance of dereferencing a
	  NULL pointer.

2017-08-10  Albrecht Dreß

	Crypto-related (mostly) fixes and improvements

	* libbalsa/gmime-multipart-crypt.c: do not qp-encode 7-bit parts for encryption
	* libbalsa/identity.[ch]: implement separate forced signing key id's
	  for gpg and s/mime including selection from the key list; clarify option text
	* libbalsa/libbalsa-gpgme-cb.c: simplify key list, show key details on double-click
	* libbalsa/libbalsa-gpgme-keys.[ch]: add functions for exporting
	  and importing ascii-armoured keys; re-factor import result evaluation
	* libbalsa/libbalsa-gpgme-widgets.c: extend subkey details
	* libbalsa/libbalsa-gpgme.[ch]: fix context creation for s/mime;
	  add helpers for configuring the gpgme context's home folder,
	  for exporting a key to ASCII and for identifying the proper key id of a secret key;
	  fix confusing comment
	* libbalsa/message.[ch]: use a reference to the sending identity
	  instead of copying the key id
	* libbalsa/misc.c: re-factor deleting a folder and creating a temp folder
	  (re-sent from last week's patch)
	* libbalsa/rfc3156.c: fix mem leak when encrypting a message
	  (re-sent from last week's patch)